--- a/assets/scss/_about.scss
+++ b/assets/scss/_about.scss
@@ -4,7 +4,7 @@
             margin-bottom: 30px;
         }
 
-        .play-video {
+        .play_video {
             margin-top: 20px;
 
             span {
