--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -8,6 +8,8 @@
 @import 'about';
 @import '404';
 @import 'testimonial';
+@import 'career';
+@import 'joinus';
 @import 'footer';
 
 /* WE_DO part start */
