--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,8 +2,7 @@
 * {
   margin: 0;
   padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 ul,
@@ -56,7 +55,21 @@ body {
 
 section {
   position: relative;
-  padding: 60px 0px;
+  padding: 90px 0;
+}
+
+input:required {
+  box-shadow: none;
+  box-shadow: 0px 1px 0px 0px red;
+  border-radius: 0;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  -ms-border-radius: 0;
+  -o-border-radius: 0;
+}
+
+.form-control:focus {
+  box-shadow: none;
 }
 
 .text_stroke {
@@ -73,6 +86,7 @@ section {
   padding: 16px;
   font-weight: 600;
   text-transform: uppercase;
+  display: inline-block;
 }
 
 .button:hover {
@@ -84,16 +98,10 @@ section {
 }
 
 .slick-slider {
-  -webkit-user-select: text;
-  -moz-user-select: text;
-  -ms-user-select: text;
   user-select: text;
 }
 
 .slick-list.draggable {
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
   user-select: none;
 }
 
@@ -101,14 +109,9 @@ section {
   position: absolute;
   bottom: -126px;
   left: 50%;
-  -webkit-transform: translate(-55%);
-          transform: translate(-55%);
-  display: -webkit-box !important;
-  display: -ms-flexbox !important;
+  transform: translate(-55%);
   display: flex !important;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
   padding-top: 60px;
 }
 
@@ -118,7 +121,6 @@ section {
   border-radius: 50%;
   margin: 0px 5px;
   border: 1px solid #3e424b;
-  -webkit-transition: all 0.6s linear;
   transition: all 0.6s linear;
 }
 
@@ -134,34 +136,21 @@ section {
 }
 
 .social_links {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
   padding-bottom: 95px;
 }
 
 .social_links li {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
   margin: 0px 16px;
   border-radius: 50%;
   background-color: transparent;
   width: 48px;
   height: 48px;
-  -webkit-transition: all 0.6s ease-in-out;
   transition: all 0.6s ease-in-out;
   position: relative;
 }
@@ -175,7 +164,6 @@ section {
 .social_links li a i {
   color: #3e424b;
   font-size: 22px;
-  -webkit-transition: all 0.6s ease-in-out;
   transition: all 0.6s ease-in-out;
   margin: 0;
   padding: 0;
@@ -189,20 +177,21 @@ section {
   z-index: -1;
   border-radius: 50%;
   border-radius: 50%;
-  -webkit-transform: scale(0);
-          transform: scale(0);
-  -webkit-transition: all 0.6s linear;
+  transform: scale(0);
   transition: all 0.6s linear;
 }
 
 .social_links li:hover::after {
-  -webkit-transform: scale(1);
-          transform: scale(1);
+  transform: scale(1);
   background-color: #5787ff;
 }
 
 .social_links li:hover a i {
   color: #fff;
+}
+
+.mb-70 {
+  margin-bottom: 70px;
 }
 
 /* ?? part start */
@@ -213,15 +202,9 @@ header {
 }
 
 header .container .head_content {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: space-between;
+  align-items: center;
   height: 90px;
 }
 
@@ -238,17 +221,12 @@ header .container .head_content .c_logo h2 .c_blue {
 }
 
 header .container .head_content .menu {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
 
 header .container .head_content .menu .m_bar {
   cursor: pointer;
-  -webkit-transition: all 0.4s ease-in-out;
   transition: all 0.4s ease-in-out;
   position: relative;
   line-height: 25px;
@@ -268,7 +246,6 @@ header .container .head_content .menu .m_bar li {
   width: 24px;
   height: 4px;
   background-color: #3e424b;
-  -webkit-transition: all 0.4s ease-in-out;
   transition: all 0.4s ease-in-out;
 }
 
@@ -281,22 +258,18 @@ header .container .head_content .menu.active .m_bar::after {
 }
 
 header .container .head_content .menu.active .m_bar li {
-  -webkit-transform: matrix(-0.71, 0.71, -0.71, -0.71, -5, -10);
-          transform: matrix(-0.71, 0.71, -0.71, -0.71, -5, -10);
+  transform: matrix(-0.71, 0.71, -0.71, -0.71, -5, -10);
 }
 
 header .container .head_content .menu.active .m_bar li:first-child {
-  -webkit-transform: matrix(0.71, 0.71, -0.71, 0.71, -5, 6);
-          transform: matrix(0.71, 0.71, -0.71, 0.71, -5, 6);
+  transform: matrix(0.71, 0.71, -0.71, 0.71, -5, 6);
 }
 
 .menu_content {
   pointer-events: none;
   height: 0;
   position: relative;
-  -webkit-clip-path: circle(100px at 120% -10%);
-          clip-path: circle(100px at 120% -10%);
-  -webkit-transition: all 1.2s linear;
+  clip-path: circle(100px at 120% -10%);
   transition: all 1.2s linear;
   overflow: hidden;
 }
@@ -304,8 +277,7 @@ header .container .head_content .menu.active .m_bar li:first-child {
 .menu_content.open {
   height: 100%;
   pointer-events: all;
-  -webkit-clip-path: circle(2200px at 0% -10%);
-          clip-path: circle(2200px at 0% -10%);
+  clip-path: circle(2200px at 0% -10%);
 }
 
 .menu_content .top {
@@ -330,8 +302,7 @@ header .container .head_content .menu.active .m_bar li:first-child {
   font-size: 24px;
   font-weight: 600;
   color: #fff;
-  -webkit-transform: translateY(-5px);
-          transform: translateY(-5px);
+  transform: translateY(-5px);
 }
 
 .menu_content .top .container .nav_links .nav_items a {
@@ -373,7 +344,6 @@ header .container .head_content .menu.active .m_bar li:first-child {
 }
 
 .menu_content .bottom .container .social_links li::after {
-  -webkit-transition: all 0.6s ease-in-out;
   transition: all 0.6s ease-in-out;
 }
 
@@ -400,8 +370,8 @@ header .container .head_content .menu.active .m_bar li:first-child {
 /* Banner section start */
 #banner {
   overflow: hidden;
-  padding-top: 178px;
-  padding-bottom: 240px;
+  padding-top: 167px;
+  padding-bottom: 180px;
 }
 
 #banner .container .banner_wrapper h2 {
@@ -416,7 +386,7 @@ header .container .head_content .menu.active .m_bar li:first-child {
   line-height: 38px;
   color: #3e424b;
   padding-right: 150px;
-  margin: 48px 0px 40px 0px;
+  margin: 32px 0px 40px 0px;
 }
 
 /* Banner section end */
@@ -424,7 +394,6 @@ header .container .head_content .menu.active .m_bar li:first-child {
   background-color: #f8f8f8;
   position: relative;
   padding-top: 170px;
-  padding-bottom: 280px;
 }
 
 #work .container-fluid .section_title h2 {
@@ -432,16 +401,9 @@ header .container .head_content .menu.active .m_bar li:first-child {
 }
 
 #work .container-fluid .project_slider .slide_item {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-transition: all 0.6s linear;
+  justify-content: space-between;
+  align-items: center;
   transition: all 0.6s linear;
 }
 
@@ -466,12 +428,8 @@ header .container .head_content .menu.active .m_bar li:first-child {
   color: #3e424b;
   letter-spacing: 2px;
   text-transform: uppercase;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
 
 #work .container-fluid .project_slider .slide_item .slide_info .v_project img {
@@ -524,7 +482,7 @@ header .container .head_content .menu.active .m_bar li:first-child {
   width: 0;
   height: 2px;
   background: #5787ff;
-  bottom: -15px;
+  bottom: -20px;
   left: 0;
   transition: 0.3s;
   -webkit-transition: 0.3s;
@@ -568,11 +526,11 @@ header .container .head_content .menu.active .m_bar li:first-child {
   margin-bottom: 30px;
 }
 
-#about .about_content .play-video {
+#about .about_content .play_video {
   margin-top: 20px;
 }
 
-#about .about_content .play-video span {
+#about .about_content .play_video span {
   font-size: 16;
   line-height: 38px;
   color: #3E424B;
@@ -661,22 +619,14 @@ header .container .head_content .menu.active .m_bar li:first-child {
 }
 
 #error_area .bottom .container .social_links {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
 }
 
 #error_area .bottom .container .social_links li {
   padding: 16px;
-  -webkit-transform: translateY(0);
-          transform: translateY(0);
-  -webkit-transition: all 0.4s linear;
+  transform: translateY(0);
   transition: all 0.4s linear;
   border-radius: 50%;
 }
@@ -687,10 +637,8 @@ header .container .head_content .menu.active .m_bar li:first-child {
 }
 
 #error_area .bottom .container .social_links li:hover {
-  -webkit-box-shadow: 0px 10px 8px rgba(0, 0, 0, 0.2);
-          box-shadow: 0px 10px 8px rgba(0, 0, 0, 0.2);
-  -webkit-transform: translateY(-10px);
-          transform: translateY(-10px);
+  box-shadow: 0px 10px 8px rgba(0, 0, 0, 0.2);
+  transform: translateY(-10px);
 }
 
 #error_area .bottom .container .c_rights {
@@ -703,6 +651,7 @@ header .container .head_content .menu.active .m_bar li:first-child {
   font-size: 16px;
   line-height: 32px;
   font-weight: 600;
+  padding-bottom: 30px !important;
 }
 
 #testimonial-area {
@@ -743,15 +692,89 @@ header .container .head_content .menu.active .m_bar li:first-child {
   border: 1px solid #fff;
 }
 
+#joinus-area .join-designer h2 {
+  font-size: 46;
+  line-height: 1.2;
+  color: #3E424B;
+  font-family: 'Oswald', sans-serif;
+  padding-bottom: 10px;
+  font-weight: 600;
+}
+
+#joinus-area .join-designer p {
+  color: #7A849A;
+  font-size: 20PX;
+  line-height: 2;
+}
+
+#joinus_footer .copyright_text {
+  padding-bottom: 30px;
+}
+
+#joinus-contact_area {
+  padding-bottom: 197px;
+}
+
+#joinus-contact_area .contact_form .form-row input {
+  border: 0;
+  border-bottom: 1px solid #ddd;
+  padding: 30px 10px;
+  outline: none;
+  margin: 20px 0;
+}
+
+#joinus-contact_area .contact_form .subject {
+  width: 100%;
+  border: 0;
+  border-bottom: 1px solid #ddd;
+  padding: 30px 10px;
+  outline: none;
+  margin: 20px 0;
+}
+
+#joinus-contact_area textarea {
+  width: 100%;
+  border: 0;
+  border-bottom: 1px solid #ddd;
+  padding: 30px 10px;
+  outline: none;
+  margin: 20px 0;
+}
+
+#joinus-contact_area button {
+  margin-top: 25px;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 2.1px;
+  color: #3e424b;
+  border: 2px solid #3e424b;
+  padding: 16px;
+  font-weight: 600;
+  text-transform: uppercase;
+  display: inline-block;
+  outline: none;
+  transition: .3s;
+  -webkit-transition: .3s;
+  -moz-transition: .3s;
+  -ms-transition: .3s;
+  -o-transition: .3s;
+}
+
+#joinus-contact_area button:hover {
+  border: 2px solid transparent;
+}
+
 #footer_area {
   text-align: center;
-  padding-top: 140px;
+  padding-top: 100px;
 }
 
 #footer_area .footer_menu span {
   font-size: 20px;
   line-height: 44px;
   color: #3e424b;
+  padding-bottom: 30px;
+  display: block;
 }
 
 #footer_area .footer_menu ul li {
@@ -814,9 +837,7 @@ header .container .head_content .menu.active .m_bar li:first-child {
   position: absolute;
   width: 100%;
   height: 100%;
-  -webkit-transform-style: preserve-3d;
-          transform-style: preserve-3d;
-  -webkit-transition: all 0.9s ease-in-out;
+  transform-style: preserve-3d;
   transition: all 0.9s ease-in-out;
   border: 1.5px solid #3e424b;
 }
@@ -825,14 +846,9 @@ header .container .head_content .menu.active .m_bar li:first-child {
   position: absolute;
   width: 100%;
   height: 100%;
-  -webkit-backface-visibility: hidden;
-          backface-visibility: hidden;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  backface-visibility: hidden;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
 
 #WE_Do .container .box_wrapper .card_box .front_part h2 {
@@ -847,17 +863,11 @@ header .container .head_content .menu.active .m_bar li:first-child {
   position: absolute;
   width: 100%;
   height: 100%;
-  -webkit-backface-visibility: hidden;
-          backface-visibility: hidden;
+  backface-visibility: hidden;
   background: #3e424b;
-  -webkit-transform: rotateY(180deg);
-          transform: rotateY(180deg);
-  display: -webkit-box;
-  display: -ms-flexbox;
+  transform: rotateY(180deg);
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
 
 #WE_Do .container .box_wrapper .card_box .back_part .box_title {
@@ -890,8 +900,7 @@ header .container .head_content .menu.active .m_bar li:first-child {
 }
 
 #WE_Do .container .box_wrapper .card_box:hover {
-  -webkit-transform: rotateY(180deg);
-          transform: rotateY(180deg);
+  transform: rotateY(180deg);
   border: transparent;
 }
 
