--- a/assets/scss/_404.scss
+++ b/assets/scss/_404.scss
@@ -45,6 +45,7 @@
               font-size: 16px;
               line-height: 32px;
               font-weight: 600;
+              padding-bottom: 30px !important;
             }
           }
         }
