--- a/assets/scss/_config.scss
+++ b/assets/scss/_config.scss
@@ -3,16 +3,20 @@
   padding: 0;
   box-sizing: border-box;
 }
+
 ul,
 ol {
   list-style: none;
   margin: 0px !important;
 }
+
 a {
   text-decoration: none;
+
   &:hover {
     @extend a;
   }
+
   &:focus {
     @extend a;
     outline: none !important;
@@ -22,6 +26,7 @@ a {
 button {
   border: none;
   outline: none;
+
   &:hover {
     @extend button;
   }
@@ -33,6 +38,7 @@ button {
     max-width: 1170px;
   }
 }
+
 .container {
   @media (min-width: 1200px) {
     max-width: 1170px;
@@ -57,7 +63,21 @@ body {
 
 section {
   position: relative;
-  padding: 60px 0px;
+  padding: 90px 0;
+}
+
+input:required {
+  box-shadow: none;
+  box-shadow: 0px 1px 0px 0px red;
+  border-radius: 0;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  -ms-border-radius: 0;
+  -o-border-radius: 0;
+}
+
+.form-control:focus {
+  box-shadow: none;
 }
 
 .text_stroke {
@@ -74,6 +94,8 @@ section {
   padding: 16px;
   font-weight: 600;
   text-transform: uppercase;
+  display: inline-block;
+
   &:hover {
     color: #3e424b;
   }
@@ -83,6 +105,7 @@ section {
 .slick-slide {
   outline: none !important;
 }
+
 .slick-slider {
   -webkit-user-select: text;
   -khtml-user-select: text;
@@ -90,6 +113,7 @@ section {
   -ms-user-select: text;
   user-select: text;
 }
+
 .slick-list.draggable {
   -webkit-user-select: none;
   -khtml-user-select: none;
@@ -97,6 +121,7 @@ section {
   -ms-user-select: none;
   user-select: none;
 }
+
 .slick-dots {
   position: absolute;
   bottom: -126px;
@@ -105,6 +130,7 @@ section {
   display: flex !important;
   justify-content: center;
   padding-top: 60px;
+
   li {
     width: 8px;
     height: 8px;
@@ -112,12 +138,14 @@ section {
     margin: 0px 5px;
     border: 1px solid #3e424b;
     transition: all 0.6s linear;
+
     &.slick-active {
       background-color: #3e424b;
       width: 16px;
       height: 8px;
       border-radius: 25px;
     }
+
     button {
       font-size: 0px;
     }
@@ -130,6 +158,7 @@ section {
   align-items: center;
   justify-content: center;
   padding-bottom: 95px;
+
   li {
     display: flex;
     align-items: center;
@@ -141,10 +170,12 @@ section {
     height: 48px;
     transition: all 0.6s ease-in-out;
     position: relative;
+
     a {
       text-align: center;
       margin: 0;
       padding: 0;
+
       i {
         color: #3e424b;
         font-size: 22px;
@@ -153,6 +184,7 @@ section {
         padding: 0;
       }
     }
+
     &::after {
       content: '';
       position: absolute;
@@ -164,12 +196,14 @@ section {
       transform: scale(0);
       transition: all 0.6s linear;
     }
+
     &:hover {
       &::after {
         transform: scale(1);
         background-color: #5787ff;
         // z-index: 1;
       }
+
       a {
         i {
           color: #fff;
@@ -177,4 +211,8 @@ section {
       }
     }
   }
+}
+
+.mb-70 {
+  margin-bottom: 70px;
 }
