--- a/assets/scss/_config.scss
+++ b/assets/scss/_config.scss
@@ -63,7 +63,7 @@ body {
   font-family: 'Oswald', sans-serif;
   text-transform: uppercase;
   @media(max-width: 575px) {
-    font-size: 68px;
+    font-size: 52px;
   }
 }
 
@@ -164,8 +164,7 @@ input:required {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-bottom: 95px;
-
+  margin-bottom: 105px !important; 
   @media(max-width:1024px){
     padding-bottom: 35px;
   }
@@ -176,8 +175,7 @@ input:required {
     margin: 0px 16px;
     border-radius: 50%;
     background-color: transparent;
-    width: 48px;
-    height: 48px;
+   
     transition: all 0.6s ease-in-out;
     position: relative;
 
@@ -191,18 +189,16 @@ input:required {
 
       i {
         color: #3e424b;
-        font-size: 22px;
+        font-size: 16px;
         transition: all 0.6s ease-in-out;
-        margin: 0;
-        padding: 0;
       }
     }
 
     &::after {
       content: '';
       position: absolute;
-      width: inherit;
-      height: inherit;
+      width: 48px;
+      height: 48px;
       z-index: -1;
       border-radius: 50%;
       border-radius: 50%;
