--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -42,6 +42,14 @@
             text-align: center;
             font-family: 'Oswald', sans-serif;
             text-transform: uppercase;
+            @media(max-width: 575px) {
+              font-size: 66px;
+              line-height: 90px;
+            }
+            @media(max-width: 480px) {
+              font-size: 52px;
+              line-height: 76px;
+            }
           }
         }
 
@@ -65,6 +73,14 @@
               color: #fff;
               font-family: 'Oswald', sans-serif;
               margin-bottom: 32px;
+              @media(max-width: 575px) {
+                font-size: 30px;
+                line-height: 42px;
+                margin-bottom: 26px;
+              }
+              @media(max-width: 480px) {
+                font-size: 20px;
+              }
             }
 
             p {
@@ -72,6 +88,9 @@
               line-height: 38px;
               color: #7a849a;
               margin-bottom: 40px;
+              @media(max-width: 575px) {
+                line-height: 32px;
+              }
             }
 
             a {
@@ -81,6 +100,11 @@
               color: #fff;
               font-family: 'Poppins', sans-serif;
               font-weight: 600;
+              img{
+                @media(max-width: 575px) {
+                  width: 22px !important;
+                }
+              }
             }
           }
         }
