--- a/assets/scss/_banner.scss
+++ b/assets/scss/_banner.scss
@@ -12,6 +12,7 @@
       h2 {
         font-size: 84px;
         line-height: 110px;
+        color: #3E424B;
         text-transform: uppercase;
         font-family: 'Oswald', sans-serif;
         @media(max-width: 767px) {
