--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -178,12 +178,12 @@ header {
       }
       .c_rights {
         text-align: center;
-        margin-top: 80px;
         h5 {
           color: #3e424b;
           font-size: 16px;
-          line-height: 32px;
-          font-weight: 600;
+          line-height: 1.7;
+          padding-bottom: 30px;
+          margin: 0;
         }
       }
     }
