--- a/assets/scss/_banner.scss
+++ b/assets/scss/_banner.scss
@@ -1,8 +1,8 @@
 /* Banner section start */
 #banner {
   overflow: hidden;
-  padding-top: 167px;
-  padding-bottom: 180px;
+  padding-top: 187px;
+  padding-bottom: 209px;
   @media(max-width: 575px) {
    padding-top: 70px;    
    padding-bottom: 112px;   
@@ -43,6 +43,7 @@
     }
     .banner_img{
       img{
+        margin-top: 36px;
         @media(max-width: 575px) {
 
           max-width: 100%;
