--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -1,12 +1,16 @@
 #footer_area {
   text-align: center;
-  padding-top: 165px;
+  padding-top: 188px;
 
   @media(max-width: 767px) {
     padding-top: 80px;
   }
 
   .footer_menu {
+
+    .nav_links{
+      padding-top: 18px;
+    }
     span {
       font-size: 20px;
       line-height: 44px;
@@ -62,7 +66,7 @@
   }
 
   .connect_info {
-    margin-top: 51px;
+    margin-top: 80px;
     margin-bottom: 26px;
 
     @media(max-width: 1024px) {
@@ -73,6 +77,7 @@
       font-size: 20px;
       line-height: 44px;
       color: #3e424b;
+      margin-bottom: 22px;
     }
 
     p {
