--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -14,6 +14,7 @@
 
 /* WE_DO part start */
 #WE_Do {
+  padding-top: 180px;
   .container {
     .box_wrapper {
       position: relative;
@@ -129,7 +130,8 @@
 
 /* brand_area part start */
 #brand_area {
-  // padding: 90px 0px !important;
+  padding-top: 20px;
+  padding-bottom: 200px;
   .container {
     .brand_slider {
       .single_brand {
